# ochre-python

./: .gitignore  FRONTEND.md  GETTING_STARTED.md  MANIFEST.in  README.md  README.md.old  README.rst  TODO.rst  pyproject.toml  requirements.txt  setup.py
examples/: campaign_expenses.json  campaign_expenses.tsv  cdli_data.tsv  cdli_topic_query.sparql  cdli_transform.xml  chaucer_topic_query.sparql  chaucer_transform.xml  config.properties  example_collection.tsv  japanese_journal_transform.xml  leningrad_codex.json  leningrad_codex.py  leningrad_codex_data.tgz  object_detection_signature.ttl  speech_transcription_signature.ttl
examples/jhu_fixtures/: articles.json  courses.json  pages.json  researchartifacts.json  researchprojects.json  users.json
examples/jhu_template_overrides/ochre/template_pack/: about.html  index.html  jhu.html  people.html  research.html  teaching.html
pyochre/machine_learning/: __main__.py
pyochre/primary_sources/: __main__.py  csv.py  processor.py  xml.py
pyochre/rest/: __main__.py  connection.py
pyochre/utils/: __init__.py  cache.py  command.py  config.py
src/pyochre/: __main__.py  env.py
src/pyochre/data/: annotation_interaction_query.sparql  audio_handler.py  domain_graph_visualization_query.sparql  domain_lexicon_query.sparql  domain_query.sparql  generative_text_signature.ttl  huggingface_handler.py  model_interaction_query.sparql  model_visualization_query.sparql  object_detection_handler.py  object_detection_signature.ttl  ochre.ttl  speech_transcription_signature.ttl  temporal_evolution_query.sparql  term_query.sparql  text_handler.py  topic_model_example_data.ttl  topic_model_handler.py  topic_model_input_signature.sparql  topic_model_signature.ttl  topic_model_training_signature.sparql
src/pyochre/extensions/hathi_trust/: __main__.py
src/pyochre/extensions/reddit/: __main__.py
src/pyochre/extensions/twitter/: __main__.py
src/pyochre/machine_learning/: __init__.py  __main__.py  mar.py
src/pyochre/primary_sources/: __init__.py  __main__.py  csv.py  domain.py  json.py  wikidata.py  xml.py
src/pyochre/rest/: __main__.py  connection.py  fixtures.py
src/pyochre/server/ochre/: celery.py  settings.py
src/pyochre/server/ochre/autoschemas/: __init__.py  ochreautoschema.py
src/pyochre/server/ochre/context_processors/: app_directory.py
src/pyochre/server/ochre/decorators/: ochre_cache_method.py
src/pyochre/server/ochre/fields/: __init__.py  actionorinterfacefield.py  annotatedobjectfield.py  annotationinteractionfield.py  audiotranscriptionfield.py  datafield.py  domainfield.py  interactionfield.py  machinelearningmodelinteractionfield.py  machinelearningmodelpropertiesfield.py  machinelearningmodelsignaturefield.py  markdowneditorfield.py  monacoeditorfield.py  ochrehyperlinkedidentityfield.py  primarysourceinteractionfield.py  sparqleditorfield.py  sparqlfield.py  tablefield.py  vegafield.py
src/pyochre/server/ochre/loaders/: __init__.py  ochreloader.py
src/pyochre/server/ochre/migrations/: 0002_remove_annotation_source_id_and_more.py  0003_remove_annotation_primarysource_and_more.py  0004_annotation_ochre_annotation_unique_name_and_user_and_more.py  0005_documentation_ochre_documentation_unique_name_and_user_and_more.py  0006_remove_annotation_primarysources_and_more.py  0007_alter_query_options_slide_active_slide_ordering.py  0008_slide_title.py  0009_alter_annotation_machinelearningmodel_and_more.py  0010_user_biography.py  (+30 more)
src/pyochre/utils/: __init__.py  command.py  meta_open.py  model_io.py  ochrehandler.py  ochrequery.py  ochreturtle.py  rdf.py
(+216 files in other folders)
