[metadata]
name = "pyochre"

[options]
package_dir = "src"
#packages = find:

[options.packages.find]
where = "src"

[options.package_data]
pyochre.data = "*.ttl"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyochre"
version = "0.0.5"
readme = "README.rst"
authors = [
  {name = "Tom Lippincott", email="tom.lippincott@jhu.edu"}
]
maintainers = [
  {name = "Tom Lippincott", email="tom.lippincott@jhu.edu"}
]
keywords = []
description = ""
classifiers = []
requires-python = ">=3.9"
dependencies = [
        "captum",
        "celery",
	"datasets",
        "django",
        "djangorestframework",
        "django-cors-headers",
        "django-debug-toolbar",
        "django-environ",
        "django-extensions",
        "django-guardian",
        "django-mptt",
        "django-registration",
        "django-sekizai",
        "drf-nested-routers",
	"gunicorn",
        "gensim",
        "jsonpath-python",
        "jsonpath_ng",
	"lxml",
        "pairtree",
        "python-dotenv",
        "rdflib",
        "redis",
        "requests",
        "spacy",
	"timm",
        "torch",
	"torchaudio",
	"torchserve",
        "torchvision",
        "torch-model-archiver",
        "transformers",
	"uritemplate",
        "watchdog",
        "wiki @ https://github.com/django-wiki/django-wiki/archive/refs/heads/main.zip",
        "wikidata"
]
# python-ldap django-auth-ldap psycopg2
[project.urls]
repository = 'https://github.com/comp-int-hum/ochre-python'



# [project.provides]
#     packages=[
#         "pyochre",
#         "pyochre.utils",
#         "pyochre.rest",
#         "pyochre.primary_sources",
#         "pyochre.machine_learning",
#         "pyochre.scholarly_knowledge",
#         "pyochre.server",
#         "pyochre.server.ochre",
#     ] + [
#         "pyochre.server.ochre.{}".format(x) for x in [
#             "content_negotiation",
#             "context_processors",
#             "decorators",
#             "fields",
#             "forms",
#             "models",
#             "migrations",            
#             "models",
#             "parsers",
#             "renderers",
#             "routers",
#             "serializers",
#             "signals",
#             "templatetags",
#             "urls",
#             "vega",
#             "views",
#             "viewsets",
#             "widgets"
#         ]
#     ],

#     install_requires=[
#         "captum",
#         "celery",
#         "django",
#         "djangorestframework",
#         "django-cors-headers",
#         "django-debug-toolbar",
#         "django-environ",
#         "django-extensions",
#         "django-guardian",
#         "django-mptt",
#         "django-registration",
#         "django-sekizai",
#         "drf-nested-routers",
#         "gensim",
#         "jsonpath-python",
#         "jsonpath_ng",
#         "pairtree",
#         "python-dotenv",
#         "rdflib",
#         "redis",
#         "requests",
#         "spacy",
#         "torch",
#         "torchvision",
#         "torch-model-archiver",
#         "transformers",
#         "watchdog",
#         "wiki",
#         "wikidata",
#     ],
#     extras_require={
#         "ldap" : [
#             "django-auth-ldap",
#             "python-ldap"
#         ],
#         "postgres" : [
#             "psycopg2"
#         ],
#         "torchserve" : [
#             "torchserve"
#         ]
#     },
#     include_package_data=True
